adding more languages

--- a/package.json
+++ b/package.json
@@ -20,7 +20,27 @@
     "onLanguage:c",
     "onLanguage:cpp",
     "onLanguage:csharp",
-    "onLanguage:go"
+    "onLanguage:go",
+    "onLanguage:php",
+    "onLanguage:rust",
+    "onLanguage:kotlin",
+    "onLanguage:swift",
+    "onLanguage:scala",
+    "onLanguage:perl",
+    "onLanguage:ruby",
+    "onLanguage:json",
+    "onLanguage:jsonc",
+    "onLanguage:css",
+    "onLanguage:scss",
+    "onLanguage:sass",
+    "onLanguage:less",
+    "onLanguage:dart",
+    "onLanguage:objective-c",
+    "onLanguage:objective-cpp",
+    "onLanguage:groovy",
+    "onLanguage:haxe",
+    "onLanguage:glsl",
+    "onLanguage:hlsl"
   ],
   "main": "./dist/extension.js",
   "contributes": {
